@@ -755,5 +755,34 @@ module PageObject
       end
       alias_method "#{name}_h6".to_sym, "#{name}_element".to_sym
     end
+
+    #
+    # adds a method to retrieve the text of a paragraph and a paragraph element
+    #
+    # @example
+    #   h6(:title, :id => 'title')
+    #   # will generate a 'title' and 'title_element' method
+    #
+    # @param [String] the name used for the generated methods
+    # @param [Hash] identifier how we find a paragraph.  You can use a multiple paramaters
+    #   by combining of any of the following except xpath.  The valid keys are:
+    #   * :class => Watir and Selenium
+    #   * :id => Watir and Selenium
+    #   * :index => Watir and Selenium
+    #   * :name => Watir and Selenium
+    #   * :xpath => Watir and Selenium
+    # @param optional block to be invoked when element method is called
+    #
+    def paragraph(name, identifier=nil, &block)
+      define_method(name) do
+        return platform.paragraph_text_for identifier.clone unless block_given?
+        self.send("#{name}_element").text
+      end
+      define_method("#{name}_element") do
+        return call_block(&block) if block_given?
+        platform.paragraph_for(identifier.clone)
+      end
+      alias_method "#{name}_paragraph".to_sym, "#{name}_element".to_sym
+    end
   end
 end
