@@ -363,5 +363,20 @@ module PageObject
     def h6_element(identifier)
       platform.h6_for(identifier.clone)
     end
+
+    #
+    # Finds a paragraph
+    #
+    # @param [Hash] identifier how we find a paragraph.  You can use a multiple paramaters
+    #   by combining of any of the following except xpath.  The valid keys are:
+    #   * :class => Watir and Selenium
+    #   * :id => Watir and Selenium
+    #   * :index => Watir and Selenium
+    #   * :name => Watir and Selenium
+    #   * :xpath => Watir and Selenium
+    #
+    def paragraph_element(identifier)
+      platform.paragraph_for(identifier.clone)
+    end
   end
 end
