@@ -19,3 +19,4 @@ require 'page-object/elements/unordered_list'
 require 'page-object/elements/ordered_list'
 require 'page-object/elements/option'
 require 'page-object/elements/heading'
+require 'page-object/elements/paragraph'
