@@ -1,0 +1,7 @@
+module PageObject
+  module Elements
+    class Paragraph < Element
+
+    end
+  end
+end
