@@ -698,6 +698,30 @@ module PageObject
           ::PageObject::Elements::Heading.new(element, :platform => :selenium_webdriver)
         end
 
+        #
+        # platform method to retrieve the text for a paragraph
+        # See PageObject::Accessors#paragraph
+        #
+        def paragraph_text_for(identifier)
+          how, what, frame_identifiers = parse_identifiers(identifier, Elements::Paragraph, 'p')
+          switch_to_frame(frame_identifiers)
+          value = @browser.find_element(how, what).text
+          @browser.switch_to.default_content
+          value          
+        end
+        
+        #
+        # platform method to retrieve the paragraph element
+        # See PageObject::Accessors#paragraph
+        #
+        def paragraph_for(identifier)
+          how, what, frame_identifiers = parse_identifiers(identifier, Elements::Heading, 'p')
+          switch_to_frame(frame_identifiers)
+          element = @browser.find_element(how, what)
+          @browser.switch_to.default_content unless frame_identifiers.nil?
+          ::PageObject::Elements::Paragraph.new(element, :platform => :selenium_webdriver)
+        end  
+
         private
         
         def parse_identifiers(identifier, element, tag_name=nil, additional=nil)
