@@ -146,4 +146,10 @@ describe PageObject::ElementLocators do
     element = watir_page_object.h6_element(:id => 'blah')
     element.should be_instance_of PageObject::Elements::Heading
   end
+
+  it "should find a paragraph element" do
+    watir_browser.should_receive(:p).with(:id => 'blah').and_return(watir_browser)
+    element = watir_page_object.paragraph_element(:id => 'blah')
+    element.should be_instance_of PageObject::Elements::Paragraph
+  end
 end
